--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,6 +9,11 @@
   --black: #000000;
 }
 
+img {
+  width: 100%;
+  height: 100%;
+}
+
 Form {
   width: 100vw;
   height: 100vh;
@@ -25,4 +30,36 @@ Form {
 
 .input {
   width: 100% !important;
+}
+
+.home {
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+}
+
+.cart {
+  width: 80%;
+  height: max-content;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.coin {
+  width: 100%;
+  height: min-content;
+  display: flex;
+  align-items: center;
+}
+
+.coin img {
+  width: 50px;
+  height: 50px;
+}
+
+.coin p {
+  font-size: 40px;
 }
