--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,6 +7,7 @@
 :root {
   --white: #ffffff;
   --black: #000000;
+  --primry: #502c02;
 }
 
 img {
@@ -24,6 +25,11 @@ Form {
   align-items: center;
 }
 
+main {
+  width: 100vw;
+  height: 100vh;
+}
+
 .mb-3 {
   width: 90%;
 }
@@ -33,19 +39,23 @@ Form {
 }
 
 .home {
-  width: 100vw;
-  height: 100vh;
   display: grid;
   align-items: center;
   justify-content: center;
 }
 
 .cart {
-  width: 80%;
+  width: 100%;
+  padding: 1.5rem;
   height: max-content;
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  align-items: center;
+  justify-content: center;
+  background-color: #e0e0e0;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 15px var(--primry);
 }
 
 .coin {
@@ -53,6 +63,7 @@ Form {
   height: min-content;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .coin img {
@@ -65,6 +76,8 @@ Form {
 }
 
 .logo {
+  width: 100px;
+  height: 100px;
   position: absolute;
   top: 1rem;
   left: 1rem;
@@ -75,4 +88,11 @@ Form {
   bottom: 2rem;
   right: 2rem;
   border-radius: 1.5rem !important;
+  box-shadow: 0 0 15px var(--primry);
+}
+
+.background {
+  background-image: url('./assets/background.jpg');
+  background-position: center center;
+  background-attachment: fixed;
 }
