--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -108,3 +108,9 @@ main {
   background-position: center center;
   background-attachment: fixed;
 }
+
+@media screen and (min-width: "600px") {
+  form {
+    width: 50%;
+  }
+}
