--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -114,7 +114,9 @@ main {
 }
 
 .filter {
-    margin: 5rem auto 1rem;
+  border: 1px solid #00000080;
+  box-shadow: 0 0 5px #00000080;
+  margin: 5rem auto 1rem;
 }
 
 .btn-back {
@@ -124,8 +126,8 @@ main {
 }
 
 .background {
-  background-image: url('./assets/background.jpg');
-  background-position: center center;
+  background-image: url('https://previews.123rf.com/images/terriana/terriana1705/terriana170500111/78418947-seashell-patr%C3%B3n-transparente-vacaciones-de-verano-fondo-marino-bajo-el-agua-con-textura-ornamental.jpg');
+  background-size: cover;
   background-attachment: fixed;
 }
 
@@ -133,7 +135,7 @@ main {
   width: 100%;
   height: 100vh;
   padding: 2rem 1rem;
-  gap: .5rem;
+  gap: 0.5rem;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   overflow-y: auto;
@@ -141,25 +143,27 @@ main {
 }
 
 .item-product {
-  height: min-content;
-  padding: .5rem;
+  height: 266px;
+  padding: 0.5rem;
   list-style: none;
   display: flex;
-  gap: .5rem;
+  gap: 0.5rem;
   flex-direction: column;
   align-items: center;
   background-color: #ffffff95;
-  border-radius: .5rem;
+  border: 1px solid #502c0280;
+  box-shadow: 1px 5px 5px #00000070;
+  border-radius: 0.5rem;
   text-align: center;
   font-weight: bold;
-  font-size: 13px;
+  font-size: 16px;
 }
 
 .item-product img {
   width: 95px;
   height: 90px;
   object-fit: cover;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
 }
 
 .modal-body {
@@ -170,7 +174,19 @@ main {
   padding: 3rem 0 !important;
 }
 
-@media only screen and ( min-width: 600px) {
+.qr-scan video {
+  width: 100%;
+}
+
+.qr-scan div {
+  width: 75%;
+  height: 30%;
+  position: absolute;
+  border: 1px solid #ffffff;
+  box-shadow: 0 0 30px #ffffff95;
+}
+
+@media only screen and (min-width: 600px) {
   .form {
     width: 40% !important;
   }
