--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -236,6 +236,10 @@ main {
   margin: 0
 }
 
+.privacy {
+  padding: 2rem 1rem;
+}
+
 @media only screen and (min-width: 600px) {
   .form {
     width: 40% !important;
