--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -188,13 +188,13 @@ main {
   border-radius: 0.5rem;
   text-align: center;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 15px;
   position: relative;
 }
 
 .item-product img {
-  width: 100px;
-  height: 100px;
+  width: 80%;
+  height: 150px;
   object-fit: cover;
   border-radius: 0.5rem;
 }
