--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -137,6 +137,9 @@ main {
 }
 
 .btn-more {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
   width: 50px;
   height: 50px;
   font-size: 25px !important;
@@ -158,7 +161,7 @@ main {
 }
 
 .background {
-  background-image: url('https://previews.123rf.com/images/terriana/terriana1705/terriana170500111/78418947-seashell-patr%C3%B3n-transparente-vacaciones-de-verano-fondo-marino-bajo-el-agua-con-textura-ornamental.jpg');
+  background-image: url('./assets/background.jpg');
   background-size: cover;
   background-attachment: fixed;
 }
@@ -176,7 +179,7 @@ main {
 
 .item-product {
   height: 300px;
-  padding: 0.1rem 0.5rem;
+  padding: 0.5rem 0.5rem;
   list-style: none;
   display: flex;
   gap: 0.5rem;
@@ -193,7 +196,7 @@ main {
 }
 
 .item-product img {
-  width: 80%;
+  width: 95%;
   height: 150px;
   object-fit: cover;
   border-radius: 0.5rem;
@@ -201,7 +204,7 @@ main {
 
 .item-product button {
   position: absolute;
-  bottom: .2rem;
+  bottom: 0.2rem;
 }
 
 .modal-body {
@@ -240,7 +243,7 @@ main {
 }
 
 .footer p {
-  margin: 0
+  margin: 0;
 }
 
 .footer a {
@@ -252,7 +255,32 @@ main {
 }
 
 .list {
-  padding-bottom: 4.5rem
+  padding-bottom: 4.5rem;
+}
+
+.alert-modal {
+  position: absolute;
+  padding: 1rem 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #aa000095;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 1rem;
+}
+
+.alert-modal p {
+  margin: 0;
+}
+
+.btn-exit {
+  width: 40px;
+  height: 40px;
+  position: fixed;
+  right: 1rem;
+  top: 2rem;
 }
 
 @media only screen and (min-width: 600px) {
