--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -300,6 +300,36 @@ main {
   animation: loader 2s infinite;
 }
 
+.header-inventary {
+  width: 100%;
+  position: absolute;
+  top: 5rem;
+  box-shadow: 0px 10px 10px #00000050;
+  
+}
+
+.header-inventary ul {
+  height: 3rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+}
+
+.header-inventary ul li {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  color: var(--white);
+  /* font-weight: bold; */
+  font-size: 20px;
+  transition: all 1s ease-in-out;
+}
+
 @keyframes loader {
   from {
     transform: rotateY(0deg);
